Enhance OperableProperty interface with generic property methods and add isBusy method to TrackableObject; update BrokenRuleCollection to provide a stream of broken rules